# monkey-language-server

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  demo.mon  rustfmt.toml
.github/workflows/: ci.yml
src/: ast.rs  diagnostics.rs  errors.rs  lexer.rs  lib.rs  main.rs  parser.rs  pos.rs  precedence.rs  spanned.rs  test_util.rs  types.rs
src/ast/: expressions.rs  mod.rs  statements.rs
src/eval/: env.rs  mod.rs  object.rs  test.rs
src/parser/: mod.rs  test.rs
src/snapshots/: monkey_language_server__lexer__test__arrays.snap  monkey_language_server__lexer__test__assignments1.snap  monkey_language_server__lexer__test__assignments2.snap  monkey_language_server__lexer__test__assignments3.snap  monkey_language_server__lexer__test__assignments4.snap  monkey_language_server__lexer__test__check_span.snap  monkey_language_server__lexer__test__conditional.snap  monkey_language_server__lexer__test__dictionary.snap  monkey_language_server__lexer__test__equality1.snap  monkey_language_server__lexer__test__equality2.snap  monkey_language_server__lexer__test__equality3.snap  monkey_language_server__lexer__test__identifiers.snap  monkey_language_server__lexer__test__ints.snap  monkey_language_server__lexer__test__keywords.snap  monkey_language_server__lexer__test__more_symbols_1.snap  monkey_language_server__lexer__test__more_symbols_2.snap  monkey_language_server__lexer__test__more_symbols_3.snap  monkey_language_server__lexer__test__operators.snap  monkey_language_server__lexer__test__simple_error.snap  monkey_language_server__lexer__test__simple_symbol.snap  (+82 more)
(+417 files in other folders)
