[package]
name = "monkey-language-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
tower-lsp = "0.20.0"
logos = "0.13.0"
thiserror = "1.0.49"

[dev-dependencies]
insta = "1.34.0"
paste = "1.0"
