[package]
name = "monkey-language-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.0", features = ["full"] }
tower-lsp = "0.20.0"
logos = "0.13.0"
thiserror = "1.0.51"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"

[dev-dependencies]
insta = "1.34.0"
